--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,22 @@
 {
   "compilerOptions": {
+    "typeRoots": ["../../node_modules/@types"],
     "moduleResolution": "node",
     "target": "ES6",
-    "module": "ES6",
+    "module": "commonjs",
     "outDir": "../atsuki-web-system/site/js",
     "strict": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@compFW/*":["../ayusui-devbase/modules/base/*"]
+      "@compFW/*":["../ayusui-devbase/modules/base/*"],
+      "@jpostaCopy/*":["../ayusui-jposta-copy/lib/*"]
     }
   },
-  "include": ["build-module/**/*.ts", "../ayusui-devbase/modules/base/**/*.ts", "build-module/**/*.ts"]
+  "include": [
+      "build-module/**/*.ts",
+      "../ayusui-devbase/modules/base/**/*.ts",
+      "modules/**/*.ts",
+      "../ayusui-jposta-copy/lib/**/*.ts"]
 }
